--- a/antonella/Elite-445.html
+++ b/antonella/Elite-445.html
@@ -3,56 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Antonella - Elite</title>
+<title>Dashboard 1</title>
 <link rel="icon" href="icon.png" type="image/png">
 <style>
 html, body {
     margin: 0;
     padding: 0;
-    height: 100%;
     width: 100%;
+    height: 100%;
     overflow: hidden;
     font-family: Arial, sans-serif;
-}
-
-/* Modal */
-#modal {
-    position: fixed;
-    inset: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: rgba(0,0,0,0.6);
-    z-index: 9999;
-}
-
-#modalContent {
-    background: #fff;
-    padding: 30px;
-    border-radius: 12px;
-    width: 90%;
-    max-width: 400px;
-    text-align: center;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.3);
-}
-
-#modalContent input {
-    width: 100%;
-    padding: 12px;
-    margin-top: 15px;
-    border-radius: 6px;
-    border: 1px solid #ccc;
-}
-
-#modalContent button {
-    margin-top: 15px;
-    padding: 12px;
-    width: 100%;
-    background: #0078ff;
-    color: #fff;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
 }
 
 iframe {
@@ -62,64 +22,31 @@ iframe {
     width: 100%;
     height: 100%;
     border: none;
-    display: none;
 }
 </style>
 </head>
 <body>
 
-<div id="modal">
-    <div id="modalContent">
-        <h2>Bem-vindo!</h2>
-        <input type="text" id="nome" placeholder="Seu nome">
-        <button onclick="entrar()">Entrar</button>
-    </div>
-</div>
+<h2 id="bemVindo" style="position:fixed;top:10px;left:10px;z-index:9999;color:#333;"></h2>
 
 <iframe id="pbiFrame" src="https://app.powerbi.com/view?r=eyJrIjoiZWYxMWNjYWYtMmQ1Yi00NzQ0LWE0YTYtY2FkM2YyMDQ5MmIxIiwidCI6ImM3NGViY2JkLWE4MGYtNDYwYy1hMDUzLTEwZDViNmY1ZWQwNSJ9"></iframe>
 
+<script src="../scripts/registro.js"></script>
 <script>
-function entrar() {
-    const nome = document.getElementById("nome").value.trim() || "Desconhecido";
-    // Salvar cookie corretamente
-    document.cookie = `usuario=${encodeURIComponent(nome)}; path=/; max-age=${60*60*24*365}; SameSite=Lax`;
-    
-    // Esconder modal e mostrar iframe
-    document.getElementById("modal").style.display = "none";
-    document.getElementById("pbiFrame").style.display = "block";
-
-    // Registro no Google Sheets
-    fetch("https://script.google.com/macros/s/AKfycbw8L0ZxkZxQ6E7BuqNPJDlr_xZTBVP12I8duKiU-Us1bS5slw7UJp_obNTrv2KuAuo/exec", {
-        method: "POST",
-        mode: "no-cors",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-            usuario: nome,
-            link: window.location.href,
-            horario: new Date().toISOString(),
-            dispositivo: navigator.userAgent
-        })
-    });
-}
-
-// Verificar cookie ao carregar
 window.onload = function() {
-    const usuario = getCookie("usuario");
+    let usuario = getCookie("usuario");
     if(usuario){
-        // Se cookie existir, esconder modal e mostrar iframe
-        document.getElementById("modal").style.display = "none";
+        // Já existe cookie
         document.getElementById("pbiFrame").style.display = "block";
+        document.getElementById("bemVindo").innerText = `Bem-vindo de volta, ${usuario}!`;
+        registrarAcesso(usuario); // registra novamente a visita
     } else {
-        // Se não existir, mostrar modal
-        document.getElementById("modal").style.display = "flex";
+        // Não existe cookie → solicita nome
+        usuario = solicitarNomeERegistrar();
+        document.getElementById("bemVindo").innerText = `Bem-vindo, ${usuario}!`;
+        document.getElementById("pbiFrame").style.display = "block";
     }
 };
-
-// Função para ler cookie
-function getCookie(nome) {
-    const match = document.cookie.match(new RegExp('(^| )' + nome + '=([^;]+)'));
-    return match ? decodeURIComponent(match[2]) : null;
-}
 </script>
 
 </body>
