--- a/dash/index.html
+++ b/dash/index.html
@@ -1,80 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<title>Login - Metrocasa</title>
-
-<!-- Firebase -->
-<script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-auth.js"></script>
-<script src="firebase.js"></script>
-
-<style>
-    body {
-        font-family: Arial;
-        background: #0e0e0e;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-        color: white;
-    }
-    #box {
-        background: #1b1b1b;
-        padding: 40px;
-        border-radius: 12px;
-        width: 300px;
-        text-align: center;
-        box-shadow: 0 0 12px rgba(255,255,255,0.08);
-    }
-    button {
-        background: #4285F4;
-        border: none;
-        padding: 12px 20px;
-        width: 100%;
-        border-radius: 6px;
-        color: white;
-        font-size: 16px;
-        cursor: pointer;
-        margin-top: 20px;
-    }
-    button:hover {
-        background: #336ac1;
-    }
-</style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Login - Meu Site</title>
+<link rel="stylesheet" href="public/styles.css" />
 </head>
 <body>
+  <main class="container">
+    <div class="card">
+      <h1>Entrar</h1>
 
-<div id="box">
-    <h2>Acesso Restrito</h2>
-    <p>Entre com sua conta corporativa</p>
-    <button onclick="loginGoogle()">Entrar com Google</button>
-</div>
+      <div id="auth-error" class="error" style="display:none;"></div>
 
-<script>
-async function loginGoogle() {
-    const provider = new firebase.auth.GoogleAuthProvider();
+      <input id="email" type="email" placeholder="E-mail" />
+      <input id="password" type="password" placeholder="Senha" />
 
-    try {
-        const result = await firebase.auth().signInWithPopup(provider);
-        const email = result.user.email;
+      <button id="btn-login">Entrar</button>
+      <button id="btn-register" class="secondary">Criar conta</button>
 
-        // Bloqueio: aceitar apenas @metrocasa
-        if (!email.includes("@metrocasa")) {
-            alert("Acesso permitido somente para e-mails corporativos Metrocasa.");
-            firebase.auth().signOut();
-            return;
-        }
+      <hr />
+      <button id="btn-google" class="google">Entrar com Google</button>
 
-        window.location.href = "home.html";
+      <p class="small">
+        <a href="#" id="link-reset">Esqueci a senha</a>
+      </p>
+    </div>
+  </main>
 
-    } catch (e) {
-        console.error(e);
-        alert("Erro ao fazer login.");
-    }
-}
-</script>
-
+  <script type="module" src="app.js"></script>
 </body>
 </html>
