--- a/matheus/Real-Madrid-430.html
+++ b/matheus/Real-Madrid-430.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Matheus</title>
+<title>Metrocasa</title>
 <link rel="icon" href="icon.png" type="image/png">
 <style>
 html, body {
@@ -42,10 +42,15 @@ iframe {
 </style>
 </head>
 <body>
+    <div class="card">
+        <h1>Site Descontinuado</h1>
+        <p>Este site não está mais disponível.</p>
+        <p>ASim… o site finalmente descansou. Virou lenda. Foi morar na nuvem (literalmente).
 
-<h2 id="bemVindo"></h2>
+Prometemos que ele não sofreu — só ficou velho demais para essa vida digital.
 
-<iframe id="pbiFrame" src="https://app.powerbi.com/view?r=eyJrIjoiMzUyMGJkNDEtMjc0YS00OGQxLTk0ZDEtYmQ3ZGI2NTYxMjczIiwidCI6ImM3NGViY2JkLWE4MGYtNDYwYy1hMDUzLTEwZDViNmY1ZWQwNSJ9"></iframe>
+Obrigado por ter visitado antes que ele virasse um fantasma da internet 👻.</p>
+    </div>
 
 <script>
 // ---------------- Cookie ----------------
