--- a/matheus/Real-Madrid-430.html
+++ b/matheus/Real-Madrid-430.html
@@ -5,41 +5,29 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Metrocasa</title>
 <link rel="icon" href="icon.png" type="image/png">
-<style>
-html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    font-family: Arial, sans-serif;
-}
-
-iframe {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: none;
-}
-
-#bemVindo {
-    position: fixed;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 9999;
-    background: rgba(255,255,255,0.9);
-    padding: 12px 20px;
-    border-radius: 8px;
-    color: #333;
-    font-size: 1.2em;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-    opacity: 0;
-    transition: opacity 1s;
-}
-</style>
+    <style>
+        body {
+            background-color: #f5f5f5;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 80px 20px;
+        }
+        .card {
+            background: white;
+            max-width: 500px;
+            margin: auto;
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.1);
+        }
+        h1 {
+            color: #d9534f;
+        }
+        p {
+            color: #555;
+            font-size: 18px;
+        }
+    </style>
 </head>
 <body>
     <div class="card">
